<resources>
    <string name="app_name">MedFil</string>

    <!-- Cadenas para pantalla "A cerca de" -->
    <string name="team_name">Miztli</string>
    <string name="intro_acerca_de">Aplicación móvil que muestra filtros de enfemedades/condiciones.</string>
    <string name="idea_original_text">Idea Original:</string>
    <string name="dra_name">Dra. Mahuina Campos</string>
    <string name="desarrolladores_text">Desarrolladores:</string>
    <string name="desarrollador_1">Israel Hernández Dorantes</string>
    <string name="desarrollador_2">Juan Manuel Lucio</string>
    <string name="desarrollador_3">Rubén Acosta Arzate</string>
    <string name="desarrollador_4">Frida Huitrón Badillo</string>

    <!-- Menu -->
    <string name="selec_filtro">Selección de filtro</string>
    <string name="creditos">A cerca de</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- Boton Switch "Filtro activado" -->
    <string name="active_filtro">On</string>
    <string name="inactive_filtro">Off</string>


    <!-- Cadenas del dialogo de bienvenida -->
    <string name="titulo_dialogo">Bienvenidos a MedFil</string>
    <string name="contenido_dialogo">MedFil es una aplicación móvil con carácter médico-educativo que busca apoyarte a ti estudiante de medicina en la identificación de facies, mediante la utilización de filtros que te permitan ver estas enfermedades/condiciones en distintas etapas y como lucen estas en gente cotidiana</string>
    <string name="boton_comienza">Comienza</string>

</resources>