<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-26dp"
        tools:layout_editor_absoluteY="-91dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="110dp"
                    android:layout_height="130dp"
                    android:layout_marginRight="60dp"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/miztliName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp"
                    android:gravity="center"
                    android:text="@string/team_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_logo"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/introAcercaDe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/intro_acerca_de"
                android:textSize="@dimen/font_size_1" />

            <TextView
                android:id="@+id/ideaOriginal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/idea_original_text"
                android:textSize="@dimen/font_size_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/draName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/dra_name"
                android:textSize="@dimen/font_size_1" />

            <TextView
                android:id="@+id/desarrolladoresId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/desarrolladores_text"
                android:textSize="@dimen/font_size_1"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/list_image1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/flecha_lista"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/desarrollador1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/desarrollador_1"
                    android:textSize="@dimen/font_size_1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/list_image2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/flecha_lista"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/desarrollador2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desarrollador_2"
                    android:textSize="@dimen/font_size_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/list_image3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/flecha_lista"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/desarrollador3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desarrollador_3"
                    android:textSize="@dimen/font_size_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/list_image4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/flecha_lista"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/desarrollador4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desarrollador_4"
                    android:textSize="@dimen/font_size_1" />

            </LinearLayout>

            <ImageView
                android:id="@+id/logoCienciasImage"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo_ciencias" />


        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>